edit slider in form

--- a/services.html
+++ b/services.html
@@ -213,7 +213,7 @@
                   </header>
                   <div class="form-group">
                     <div id="reservation">
-                      <select name="minbeds" id="minbeds" class="minbeds">
+                      <select name="minbeds" id="minbeds" class="form-control minbeds">
                         <option value="от&nbsp;10000">1</option>
                         <option value="от&nbsp;50000" selected>2</option>
                         <option value="от&nbsp;100000">3</option>
@@ -506,6 +506,7 @@
     <script src="dist/js/fancybox/jquery.fancybox.pack.js"></script>
     <script src="dist/js/fancybox/helpers/jquery.fancybox-buttons.js"></script>
     <script src="dist/js/response.min.js"></script>
+    <script src="dist/js/detectmobilebrowser.js"></script>    
     <script src="dist/js/main.js"></script>
     
   </body>
