add back link and crumbs

--- a/news.html
+++ b/news.html
@@ -110,6 +110,26 @@
         <section class="col-sm-8">
 
 
+          <!-- Блок назад -->
+          <div class="row head-page-tools">
+            <div class="col-xs-3 col-sm-2">
+              <a class="btn btn-primary back_page" href="javascript:history.back()">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                Назад
+              </a>
+            </div>
+            <div class="col-xs-9 col-sm-10">
+              <ol class="breadcrumb">
+                <li><a href="/">Главная</a></li>
+                <li>/</li>
+                <li>Новости</li>
+                <li></li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Блок назад -->
+
+
           <!-- Статья -->
           <article class="article">
             <h2>Международный страховой полис</h2>
