--- a/news.html
+++ b/news.html
@@ -113,7 +113,7 @@
           <!-- Блок назад -->
           <div class="row head-page-tools">
             <div class="col-xs-3 col-sm-2">
-              <a class="btn btn-primary back_page" href="javascript:history.back()">
+              <a class="btn-sm btn-primary back_page" href="javascript:history.back()">
                 <span class="glyphicon glyphicon-chevron-left"></span>
                 Назад
               </a>
@@ -123,7 +123,8 @@
                 <li><a href="/">Главная</a></li>
                 <li>/</li>
                 <li>Новости</li>
-                <li></li>
+                <li>/</li>
+                <li><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span></li>
               </ol>
             </div>
           </div>
