--- a/services.html
+++ b/services.html
@@ -292,12 +292,10 @@
                   <div class="form-group">
                     <div id="reservation">
                       <select name="minbeds" id="minbeds2" class="minbeds">
-                        <option value="от&nbsp;10000">1</option>
-                        <option value="от&nbsp;50000" selected>2</option>
-                        <option value="от&nbsp;100000">3</option>
-                        <option value="от&nbsp;300000">4</option>
-                        <option value="от&nbsp;500000">5</option>
-                        <option value="от&nbsp;1000000">6</option>
+                        <option value="от&nbsp;100&nbsp;000 до&nbsp;300&nbsp;000">1</option>
+                        <option value="от&nbsp;300&nbsp;000 до&nbsp;500&nbsp;000" selected>2</option>
+                        <option value="от&nbsp;500&nbsp;000 до&nbsp;1&nbsp;000&nbsp;000">3</option>
+                        <option value="от&nbsp;1&nbsp;000&nbsp;000">4</option>
                       </select>
                     </div>
                   </div>
