add simulate articles

--- a/blog_open.html
+++ b/blog_open.html
@@ -135,7 +135,7 @@
             <!-- Похож. статья -->
             <li class="sim_article_item">
               <a href="" class="sim_article_img">
-                <img src="dist/img/sm_img_article.jpg" alt="">
+                <img src="dist/img/noimg.gif">
               </a>
               <a href="" class="sim_article_title">
                 Что делать, если у меня есть поручитель или я поручитель?
