--- a/success.html
+++ b/success.html
@@ -128,7 +128,7 @@
           <ul class="docs">
             <li>
               <h3 class="title">МигомДеньги</h3>
-              <p class="num">Дело №5-394/12/24</p>
+              <p class="num">Дело №5-394/12/24 Взыскание с банка незаконной комисси за выдачу кредита 25 882 руб. 41 коп.</p>
               <a href="dist/img/five/15121401.JPG" class="scan fancybox" rel="album1">
                 <img src="dist/img/five/15121401_min.jpg" alt="">
               </a>
