--- a/we-in-the-media.html
+++ b/we-in-the-media.html
@@ -149,7 +149,7 @@
 
 
             <!-- PDF ДОКУМЕНТ -->
-            <div class="media-item media-action-pdf media-filter-print" data-fancybox-type="iframe" data-fancybox-href="dist/img/testpdf.pdf">
+            <div class="media-item media-action-pdf media-filter-print" data-fancybox-href='http://xn--24-9kcmeankp7bs1a1aa.xn--p1ai/SPb_02.pdf' data-fancybox-type="iframe">
               <div class="media-preview">
                 <img src="dist/img/post0.jpg">
               </div>
